fixed firefox scrollbars

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,17 +115,18 @@ button:hover {
     flex: 1;
 }
 
-.conversations {
-    width: calc( 100% + 8px );
-    overflow-y: scroll;
-}
-
 .conversations,
 .conversations li {
     list-style: none;
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+.conversations {
+    width: 100%;
+    overflow-y: auto;
+    padding-right: 8px;
 }
 
 .conversations li {
